--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^6.21.2",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
